k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webauthn
  namespace: connectid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webauthn
  template:
    metadata:
      labels:
        app: webauthn
    spec:
      containers:
        - image: darkedges/webauthnapi:latest
          imagePullPolicy: Always
          name: webauthn
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: darkedegesregistry
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webauthn
    service: webauthn
  name: webauthn
  namespace: connectid
spec:
  ports:
    - port: 8000
  selector:
    app: webauthn
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: authorization,content-type
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: https://webauthn.connectid.darkedges.com
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: connectid-api-ingress
  namespace: connectid
spec:
  ingressClassName: nginx
  rules:
    - host: api.connectid.darkedges.com
      http:
        paths:
          - backend:
              service:
                name: webauthn
                port:
                  number: 8080
            path: /webauthn/(.*)
            pathType: Prefix
  tls:
    - hosts:
        - api.connectid.darkedges.com
      secretName: connectid-api-external-tls
